(lang dune 2.8)
(name io_uring)
(license BSD-3-Clause)
(generate_opam_files true)
(authors "")
(source (github mt-caret/io_uring))
(package
  (name io_uring)
  (synopsis "IO uring bindings for ocaml")
  (authors "mt-caret")
  (maintainers "mt-caret <mtakeda.enigsol@gmail.com>")
  (homepage "https://github.com/mt-caret/io_uring")
  (bug_reports "https://github.com/mt-caret/io_uring")
  (version 1.0)
  (depends (core (>= "v0.14.1")) (ocaml (>= "4.08.0")))
)
