(executables
  (names nop)
  (modules nop)
  (libraries core io_uring)
  (preprocess (pps ppx_jane)))

(executables
  (names cp)
  (modules cp)
  (libraries core io_uring)
  (preprocess (pps ppx_jane)))

(executables
  (names echo_tcp)
  (modules echo_tcp)
  (libraries core io_uring)
  (preprocess (pps ppx_jane)))

(executables
  (names http)
  (modules http)
  (libraries core httpaf io_uring)
  (preprocess (pps ppx_jane)))

(executables
  (names promise)
  (modules promise)
  (libraries core httpaf io_uring)
  (preprocess (pps ppx_jane)))
