(library
 (name io_uring)
 (public_name io_uring)
 (libraries core_kernel.bounded_int_table core)
 (c_names io_uring_stubs)
 (c_library_flags :standard -luring)
 (preprocessor_deps config.h)
 (preprocess (pps ppx_jane)))

(rule (targets config.h) (deps)
 (action (bash "cp %{lib:jst-config:config.h} .")))
