(library
 (name io_uring)
 (public_name io_uring)
 (libraries core)
 (foreign_stubs (language c) (names io_uring_stubs))
 (c_library_flags :standard -luring)
 (preprocessor_deps config.h)
 (preprocess (pps ppx_jane)))

(rule (targets config.h) (deps)
 (action (bash "cp %{lib:jst-config:config.h} .")))
